rs/macros/tests/ui/gservice_fails_multiple_not_allowed_on_one_impl.stderr
error: multiple `service` attributes on the same impl are not allowed
  --> tests/ui/gservice_fails_multiple_not_allowed_on_one_impl.rs:6:1
   |
 6 | / #[service]
 7 | | impl MyService {
 8 | |     #[export]
 9 | |     pub fn this(&self, p1: bool) -> bool {
...  |
12 | | }
   | |_^
